force-app/main/default/objects/Student__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engg</fullName>
                <label>Engineering</label>
            </value>
            <value>
                <fullName>MB</fullName>
                <label>MBBS</label>
            </value>
            <value>
                <fullName>Law</fullName>
                <label>Lawer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>