force-app/main/default/objects/Student__c/fields/Four_year_course__c.field-meta.xml
<CustomField>
    <fullName>Four_year_course__c</fullName>
    <formula>IF(RecordType.Name=&quot;Engineering Student&quot;, TRUE, FALSE)</formula>
    <label>Four year course?</label>
    <type>Checkbox</type>
</CustomField>