force-app/main/default/objects/Student__c/recordTypes/Degree_Student.recordType-meta.xml
<RecordType>
    <fullName>Degree_Student</fullName>
    <active>true</active>
    <label>Degree Student</label>
</RecordType>