force-app/main/default/objects/Student__c/recordTypes/Engineering_Student.recordType-meta.xml
<RecordType>
    <fullName>Engineering_Student</fullName>
    <active>true</active>
    <label>Engineering Student</label>
</RecordType>